# CMake-Qt-MSVC-dll-build-LNK2001-error

./: CMakeLists.txt  README.md  msvc_linker_error.pro
cmake/: common.cmake  config.cmake.in  macro_helper.cmake.in
lpLibs/: CMakeLists.txt  lpLibs.pro  lpLogger.pri
lpLibs/QtCommonTools/: CMakeLists.txt  QtCommonTools.pro
lpLibs/QtCommonTools/include/QtCommonTools/: QtCommonTools_global.h  utils.h
lpLibs/QtCommonTools/src/: utils.cpp
lpLibs/lpLogger/: CMakeLists.txt  lpLogger.pro
lpLibs/lpLogger/include/lpLogger/: logger.h  lpLogger_global.h
lpLibs/lpLogger/src/: logger.cpp
